--- a/.github/workflows/reload.yml
+++ b/.github/workflows/reload.yml
@@ -4,7 +4,8 @@ name: reload app
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
-on:
+on: 
+  workflow_dispatch:
   schedule:
     - cron: '*/15 * * * *'
 
